# Shiber

./: .dockerignore  Cargo.toml  Dockerfile  Procfile  README.md  example.env
.github/workflows/: rust.yml
src/: constants.rs  events.rs  main.rs  utils.rs
src/commands/: help.rs  image.rs  mod.rs  moderation.rs
src/database/: guild.rs  mod.rs
