[package]
name = "shiber"
version = "0.1.0"
authors = ["LuckShiba <luckshiba@protonmail.com>"]
edition = "2018"

[dependencies]
serenity = "^0.10.5"
dotenv = "^0.15.0"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.isahc]
version = "^1.3.0"
features = ["json"]